we finish stage 6